src/components/Nav/Nav.css
.greeting {
  margin: 0 0 0.1em 0;
}

nav {
  /* background-color: lightgray; */
  display: flex;
  justify-content: space-between;
}

.nav-title {
  font-family: "Open Sans", sans-serif;
  font-size: 2.5em;
  margin: 0;
}

.logo-nav {
  height: 5em;
  display: flex;
  /* align-items: center; */
  margin: 1em 0 0 1em;
}

.nav-marker {
  height: 50%;
  /* position: relative; */
  margin-top: 0.5em;
}

.greeting-btn-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-right: 3em;
  /* width: 20em; */
  align-items: center;
}

.nav-subtitle {
  font-size: 0.5em;
  padding-left: 0.6em;
}

h1 {
  font-size: 3em;
  font-weight: 400;
  margin: 0.15em 0;
}

.favorite-btn {
  height: auto;
  width: auto;
  padding: 0.5em 1em;
  font-family: "Open Sans", sans-serif;
  text-transform: uppercase;
  margin: 0 10em;
  cursor: pointer;
}

.logged-in-elements {
  display: flex;
  margin-right: 3em;
  justify-content: space-between;
}

.nav-btn-container {
  display: flex;
  align-items: center;
}

.nav-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid black;
  font-size: 1em;
  background-color: white;
  color: black;
  width: auto;
  height: auto;
  text-decoration: none;
  padding: 1em;
  font-family: "Open Sans", sans-serif;
  text-transform: uppercase;
  cursor: pointer;
}

/* .nav-btn:hover {
  background-color: green;
  color: white;
} */

.fav-btn {
  margin-right: 1em;
}

.trip-type {
  font-family: "Open Sans", sans-serif;
  font-size: 0.8em;
  text-transform: capitalize;
}

.title-text {
  text-decoration: none;
  color: black;
  width: 100%;
}

